// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DownloadCards /> renders with beta 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="header"
    >
      Download for Linux (x64)
    </div>
    <a
      href="https://npm.taobao.org/mirrors/poi/v10.3.0/poi-10.3.0.7z"
    >
      <button
        class="button"
      >
        <div>
          v10.3.0
        </div>
        <div
          class="description"
        >
          Stable, for most users
        </div>
      </button>
    </a>
    <a
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-10.4.0.7z"
    >
      <button
        class="button beta"
      >
        <div>
          v10.4.0
        </div>
        <div
          class="description"
        >
          Beta, for new features
        </div>
      </button>
    </a>
  </div>
</DocumentFragment>
`;

exports[`<DownloadCards /> renders with invalid target 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="header"
    >
      Download for chiba
    </div>
    <a
      href="https://github.com/poooi/poi/releases"
    >
      <button
        class="button"
      >
        <div>
          v10.3.0
        </div>
        <div
          class="description"
        >
          Stable, for most users
        </div>
      </button>
    </a>
    <a
      href="https://github.com/poooi/poi/releases"
    >
      <button
        class="button beta"
      >
        <div>
          v10.4.0
        </div>
        <div
          class="description"
        >
          Beta, for new features
        </div>
      </button>
    </a>
  </div>
</DocumentFragment>
`;

exports[`<DownloadCards /> renders without beta 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="header"
    >
      Download for Linux (x64)
    </div>
    <a
      href="https://npm.taobao.org/mirrors/poi/v10.3.0/poi-10.3.0.7z"
    >
      <button
        class="button"
      >
        <div>
          v10.3.0
        </div>
        <div
          class="description"
        >
          Stable, for most users
        </div>
      </button>
    </a>
  </div>
</DocumentFragment>
`;
